--- a/action.yml
+++ b/action.yml
@@ -217,6 +217,6 @@ runs:
         echo "args=$args" >> $GITHUB_ENV
 
     - name: Run SOOS DAST
-      uses: docker://soosio/dast:latest
-      with:
-        args: ${{ env.args }}
+      run: |
+        docker pull soosio/dast:latest
+        docker run -it --rm soosio/dast:latest $args
