--- a/action.yml
+++ b/action.yml
@@ -178,44 +178,44 @@ runs:
         args=""
 
         [ -n "${{ inputs.ajax_spider }}" == "true" ] && args+="--ajaxSpider "
-        [ -n "${{ inputs.api_key }}" ] && args+="--apiKey=${{ inputs.api_key }} "
-        [ -n "${{ inputs.api_scan_format }}" ] && args+="--apiScanFormat=${{ inputs.api_scan_format }} "
-        [ -n "${{ inputs.api_url }}" ] && args+="--apiURL=${{ inputs.api_url }} "
-        [ -n "${{ inputs.auth_delay_time }}" ] && args+="--authDelayTime=${{ inputs.auth_delay_time }} "
-        [ -n "${{ inputs.auth_form_type }}" ] && args+="--authFormType=${{ inputs.auth_form_type }} "
-        [ -n "${{ inputs.auth_login_url }}" ] && args+="--authLoginUrl=${{ inputs.auth_login_url }} "
-        [ -n "${{ inputs.auth_password }}" ] && args+="--authPassword=${{ inputs.auth_password }} "
-        [ -n "${{ inputs.auth_password_field }}" ] && args+="--authPasswordField=${{ inputs.auth_password_field }} "
-        [ -n "${{ inputs.auth_second_submit_field }}" ] && args+="--authSecondSubmitField=${{ inputs.auth_second_submit_field }} "
-        [ -n "${{ inputs.auth_submit_action }}" ] && args+="--authSubmitAction=${{ inputs.auth_submit_action }} "
-        [ -n "${{ inputs.auth_submit_field }}" ] && args+="--authSubmitField=${{ inputs.auth_submit_field }} "
-        [ -n "${{ inputs.auth_username }}" ] && args+="--authUsername=${{ inputs.auth_username }} "
-        [ -n "${{ inputs.auth_username_field }}" ] && args+="--authUsernameField=${{ inputs.auth_username_field }} "
-        [ -n "${{ inputs.auth_verification_url }}" ] && args+="--authVerificationUrl=${{ inputs.auth_verification_url }} "
-        [ -n "${{ inputs.bearer_token }}" ] && args+="--bearerToken=${{ inputs.bearer_token }} "
-        [ -n "${{ inputs.branch_name }}" ] && args+="--branchName=${{ inputs.branch_name }} "
-        [ -n "${{ inputs.branch_uri }}" ] && args+="--branchUri=${{ inputs.branch_uri }} "
-        [ -n "${{ inputs.build_uri }}" ] && args+="--buildUri=${{ inputs.build_uri }} "
-        [ -n "${{ inputs.build_version }}" ] && args+="--buildVersion=${{ inputs.build_version }} "
-        [ -n "${{ inputs.client_id }}" ] && args+="--clientId=${{ inputs.client_id }} "
-        [ -n "${{ inputs.context_file }}" ] && args+="--contextFile=${{ inputs.context_file }} "
-        [ -n "${{ inputs.context_user }}" ] && args+="--contextUser=${{ inputs.context_user }} "
+        [ -n "${{ inputs.api_key }}" ] && args+="--apiKey=\"$(printf '%q' "${{ inputs.api_key }}")\" "
+        [ -n "${{ inputs.api_scan_format }}" ] && args+="--apiScanFormat=\"$(printf '%q' "${{ inputs.api_scan_format }}")\" "
+        [ -n "${{ inputs.api_url }}" ] && args+="--apiURL=\"$(printf '%q' "${{ inputs.api_url }}")\" "
+        [ -n "${{ inputs.auth_delay_time }}" ] && args+="--authDelayTime=\"$(printf '%q' "${{ inputs.auth_delay_time }}")\" "
+        [ -n "${{ inputs.auth_form_type }}" ] && args+="--authFormType=\"$(printf '%q' "${{ inputs.auth_form_type }}")\" "
+        [ -n "${{ inputs.auth_login_url }}" ] && args+="--authLoginUrl=\"$(printf '%q' "${{ inputs.auth_login_url }}")\" "
+        [ -n "${{ inputs.auth_password }}" ] && args+="--authPassword=\"$(printf '%q' "${{ inputs.auth_password }}")\" "
+        [ -n "${{ inputs.auth_password_field }}" ] && args+="--authPasswordField=\"$(printf '%q' "${{ inputs.auth_password_field }}")\" "
+        [ -n "${{ inputs.auth_second_submit_field }}" ] && args+="--authSecondSubmitField=\"$(printf '%q' "${{ inputs.auth_second_submit_field }}")\" "
+        [ -n "${{ inputs.auth_submit_action }}" ] && args+="--authSubmitAction=\"$(printf '%q' "${{ inputs.auth_submit_action }}")\" "
+        [ -n "${{ inputs.auth_submit_field }}" ] && args+="--authSubmitField=\"$(printf '%q' "${{ inputs.auth_submit_field }}")\" "
+        [ -n "${{ inputs.auth_username }}" ] && args+="--authUsername=\"$(printf '%q' "${{ inputs.auth_username }}")\" "
+        [ -n "${{ inputs.auth_username_field }}" ] && args+="--authUsernameField=\"$(printf '%q' "${{ inputs.auth_username_field }}")\" "
+        [ -n "${{ inputs.auth_verification_url }}" ] && args+="--authVerificationUrl=\"$(printf '%q' "${{ inputs.auth_verification_url }}")\" "
+        [ -n "${{ inputs.bearer_token }}" ] && args+="--bearerToken=\"$(printf '%q' "${{ inputs.bearer_token }}")\" "
+        [ -n "${{ inputs.branch_name }}" ] && args+="--branchName=\"$(printf '%q' "${{ inputs.branch_name }}")\" "
+        [ -n "${{ inputs.branch_uri }}" ] && args+="--branchUri=\"$(printf '%q' "${{ inputs.branch_uri }}")\" "
+        [ -n "${{ inputs.build_uri }}" ] && args+="--buildUri=\"$(printf '%q' "${{ inputs.build_uri }}")\" "
+        [ -n "${{ inputs.build_version }}" ] && args+="--buildVersion=\"$(printf '%q' "${{ inputs.build_version }}")\" "
+        [ -n "${{ inputs.client_id }}" ] && args+="--clientId=\"$(printf '%q' "${{ inputs.client_id }}")\" "
+        [ -n "${{ inputs.context_file }}" ] && args+="--contextFile=\"$(printf '%q' "${{ inputs.context_file }}")\" "
+        [ -n "${{ inputs.context_user }}" ] && args+="--contextUser=\"$(printf '%q' "${{ inputs.context_user }}")\" "
         [ -n "${{ inputs.debug }}" == "true" ] && args+="--debug "
         [ -n "${{ inputs.disable_rules }}" == "true" ] && args+="--disableRules "
-        [ -n "${{ inputs.full_scan_minutes }}" ] && args+="--fullScanMinutes=${{ inputs.full_scan_minutes }} "
-        [ -n "${{ inputs.log_level }}" ] && args+="--logLevel=${{ inputs.log_level }} "
-        [ -n "${{ inputs.oauth_parameters }}" ] && args+="--oauthParameters=${{ inputs.oauth_parameters }} "
-        [ -n "${{ inputs.oauth_token_url }}" ] && args+="--oauthTokenUrl=${{ inputs.oauth_token_url }} "
-        [ -n "${{ inputs.on_failure }}" ] && args+="--onFailure=${{ inputs.on_failure }} "
-        [ -n "${{ inputs.operating_environment }}" ] && args+="--operatingEnvironment=${{ inputs.operating_environment }} "
-        [ -n "${{ inputs.other_options }}" ] && args+="--otherOptions=${{ inputs.other_options }} "
-        [ -n "${{ inputs.output_format }}" ] && args+="--outputFormat=${{ inputs.output_format }} "
-        [ -n "${{ inputs.project_name }}" ] && args+="--projectName=${{ inputs.project_name }} "
-        [ -n "${{ inputs.request_cookies }}" ] && args+="--requestCookies=${{ inputs.request_cookies }} "
-        [ -n "${{ inputs.request_headers }}" ] && args+="--requestHeaders=${{ inputs.request_headers }} "
-        [ -n "${{ inputs.scan_mode }}" ] && args+="--scanMode=${{ inputs.scan_mode }} "
+        [ -n "${{ inputs.full_scan_minutes }}" ] && args+="--fullScanMinutes=\"$(printf '%q' "${{ inputs.full_scan_minutes }}")\" "
+        [ -n "${{ inputs.log_level }}" ] && args+="--logLevel=\"$(printf '%q' "${{ inputs.log_level }}")\" "
+        [ -n "${{ inputs.oauth_parameters }}" ] && args+="--oauthParameters=\"$(printf '%q' "${{ inputs.oauth_parameters }}")\" "
+        [ -n "${{ inputs.oauth_token_url }}" ] && args+="--oauthTokenUrl=\"$(printf '%q' "${{ inputs.oauth_token_url }}")\" "
+        [ -n "${{ inputs.on_failure }}" ] && args+="--onFailure=\"$(printf '%q' "${{ inputs.on_failure }}")\" "
+        [ -n "${{ inputs.operating_environment }}" ] && args+="--operatingEnvironment=\"$(printf '%q' "${{ inputs.operating_environment }}")\" "
+        [ -n "${{ inputs.other_options }}" ] && args+="--otherOptions=\"$(printf '%q' "${{ inputs.other_options }}")\" "
+        [ -n "${{ inputs.output_format }}" ] && args+="--outputFormat=\"$(printf '%q' "${{ inputs.output_format }}")\" "
+        [ -n "${{ inputs.project_name }}" ] && args+="--projectName=\"$(printf '%q' "${{ inputs.project_name }}")\" "
+        [ -n "${{ inputs.request_cookies }}" ] && args+="--requestCookies=\"$(printf '%q' "${{ inputs.request_cookies }}")\" "
+        [ -n "${{ inputs.request_headers }}" ] && args+="--requestHeaders=\"$(printf '%q' "${{ inputs.request_headers }}")\" "
+        [ -n "${{ inputs.scan_mode }}" ] && args+="--scanMode=\"$(printf '%q' "${{ inputs.scan_mode }}")\" "
         [ -n "${{ inputs.verbose }}" == "true" ] && args+="--verbose "
-        [ -n "${{ inputs.zap_options }}" ] && args+="--zapOptions=${{ inputs.zap_options }} "
+        [ -n "${{ inputs.zap_options }}" ] && args+="--zapOptions=\"$(printf '%q' "${{ inputs.zap_options }}")\" "
 
         [ -n "${{ inputs.target_url }}" ] && args+=" ${{ inputs.target_url }}"
 
