--- a/action.yml
+++ b/action.yml
@@ -201,19 +201,19 @@ runs:
         [ -n "${{ inputs.disable_rules }}" == "true" ] && args+="--disableRules "
         [ -n "${{ inputs.full_scan_minutes }}" ] && args+="--fullScanMinutes=${{ inputs.full_scan_minutes }} "
         [ -n "${{ inputs.log_level }}" ] && args+="--logLevel=${{ inputs.log_level }} "
-        [ -n "${{ inputs.oauth_parameters }}" ] && args+="--oauthParameters=\"${{ inputs.oauth_parameters }}\" "
+        [ -n "${{ inputs.oauth_parameters }}" ] && args+="--oauthParameters=${{ inputs.oauth_parameters }} "
         [ -n "${{ inputs.oauth_token_url }}" ] && args+="--oauthTokenUrl=${{ inputs.oauth_token_url }} "
         [ -n "${{ inputs.on_failure }}" ] && args+="--onFailure=${{ inputs.on_failure }} "
         [ -n "${{ inputs.operating_environment }}" ] && args+="--operatingEnvironment=${{ inputs.operating_environment }} "
-        [ -n "${{ inputs.other_options }}" ] && args+="--otherOptions=\"${{ inputs.other_options }}\" "
+        [ -n "${{ inputs.other_options }}" ] && args+="--otherOptions=${{ inputs.other_options }} "
         [ -n "${{ inputs.output_format }}" ] && args+="--outputFormat=${{ inputs.output_format }} "
         [ -n "${{ inputs.project_name }}" ] && args+="--projectName=${{ inputs.project_name }} "
-        [ -n "${{ inputs.request_cookies }}" ] && args+="--requestCookies=\"${{ inputs.request_cookies }}\" "
-        [ -n "${{ inputs.request_headers }}" ] && args+="--requestHeaders=\"${{ inputs.request_headers }}\" "
+        [ -n "${{ inputs.request_cookies }}" ] && args+="--requestCookies=${{ inputs.request_cookies }} "
+        [ -n "${{ inputs.request_headers }}" ] && args+="--requestHeaders=${{ inputs.request_headers }} "
         [ -n "${{ inputs.scan_mode }}" ] && args+="--scanMode=${{ inputs.scan_mode }} "
         [ -n "${{ inputs.verbose }}" == "true" ] && args+="--verbose "
 
-        [ -n "${{ inputs.target_url }}" ] && args+=" ${{ inputs.target_url }}"
+        [ -n "${{ inputs.target_url }}" ] && args+="${{ inputs.target_url }}"
 
         echo "Arguments: $args"
 
