--- a/action.yml
+++ b/action.yml
@@ -222,5 +222,6 @@ runs:
     - name: Run SOOS DAST
       shell: bash
       run: |
+        echo "args: $args"
         docker pull soosio/dast:${{ inputs.image_tag }}
         docker run --rm soosio/dast:${{ inputs.image_tag }} $args
