--- a/action.yml
+++ b/action.yml
@@ -174,7 +174,7 @@ runs:
         set +x  # Turn off command echoing
         args=""
 
-        [ -n "${{ inputs.ajax_spider }}" == "true" ] && args+="--ajaxSpider "
+        [[ "${{ inputs.ajax_spider }}" == "true" ]] && args+="--ajaxSpider "
         [ -n "${{ inputs.api_key }}" ] && args+="--apiKey=${{ inputs.api_key }} "
         [ -n "${{ inputs.api_scan_format }}" ] && args+="--apiScanFormat=${{ inputs.api_scan_format }} "
         [ -n "${{ inputs.api_url }}" ] && args+="--apiURL=${{ inputs.api_url }} "
@@ -197,8 +197,8 @@ runs:
         [ -n "${{ inputs.client_id }}" ] && args+="--clientId=${{ inputs.client_id }} "
         [ -n "${{ inputs.context_file }}" ] && args+="--contextFile=${{ inputs.context_file }} "
         [ -n "${{ inputs.context_user }}" ] && args+="--contextUser=${{ inputs.context_user }} "
-        [ -n "${{ inputs.debug }}" == "true" ] && args+="--debug "
-        [ -n "${{ inputs.disable_rules }}" == "true" ] && args+="--disableRules "
+        [[ "${{ inputs.debug }}" == "true" ]] && args+="--debug "
+        [[ "${{ inputs.disable_rules }}" == "true" ]] && args+="--disableRules "
         [ -n "${{ inputs.full_scan_minutes }}" ] && args+="--fullScanMinutes=${{ inputs.full_scan_minutes }} "
         [ -n "${{ inputs.log_level }}" ] && args+="--logLevel=${{ inputs.log_level }} "
         [ -n "${{ inputs.oauth_parameters }}" ] && args+="--oauthParameters=\"${{ inputs.oauth_parameters }}\" "
@@ -211,7 +211,7 @@ runs:
         [ -n "${{ inputs.request_cookies }}" ] && args+="--requestCookies=\"${{ inputs.request_cookies }}\" "
         [ -n "${{ inputs.request_headers }}" ] && args+="--requestHeaders=\"${{ inputs.request_headers }}\" "
         [ -n "${{ inputs.scan_mode }}" ] && args+="--scanMode=${{ inputs.scan_mode }} "
-        [ -n "${{ inputs.verbose }}" == "true" ] && args+="--verbose "
+        [[ "${{ inputs.verbose }}" == "true" ]] && args+="--verbose "
 
         [ -n "${{ inputs.target_url }}" ] && args+="${{ inputs.target_url }}"
 
