--- a/action.yml
+++ b/action.yml
@@ -57,7 +57,7 @@ inputs:
   branch_uri:
     description: 'URI to branch from SCM system.'
     required: false
-    default: '${{ github.server_url }}/${{ github.repository }}/tree/${{ github.ref_name }}"'
+    default: '${{ github.server_url }}/${{ github.repository }}/tree/${{ github.ref_name }}'
   branch_name:
     description: 'Branch Name to create scan under'
     required: false
