--- a/action.yml
+++ b/action.yml
@@ -170,6 +170,7 @@ runs:
       run: |
         set +x  # Turn off command echoing
         [ "${{ inputs.verbose }}" == "true" ] && echo "Warning: verbose is deprecated. Set log_level to DEBUG for the same effect."
+        printf '\n'
 
     - name: Set Arguments
       shell: bash
