make mnt writable

--- a/action.yml
+++ b/action.yml
@@ -215,4 +215,5 @@ runs:
       shell: bash
       run: |
         docker pull soosio/dast:${{ inputs.image_tag }}
+        chmod -R 777 ${{ github.workspace }}
         eval "docker run -u zap -v ${{ github.workspace }}:/zap/wrk/:rw --rm soosio/dast:${{ inputs.image_tag }} $args"
